--- a/app/templates/progress.html
+++ b/app/templates/progress.html
@@ -126,17 +126,17 @@
 
         <thead class="thead-light">
         <th>&nbsp;</th>
-        <th class="text-center">Percent</th>
+        <th class="text-center">%</th>
         <th class="text-center">Maxed</th>
-        <th class="text-center">Percent</th>
+        <th class="text-center">%</th>
         <th class="text-center">Maxed</th>
-        <th class="text-center">Percent</th>
+        <th class="text-center">%</th>
         <th class="text-center">Maxed</th>
-        <th class="text-center">Percent</th>
+        <th class="text-center">%</th>
         <th class="text-center">Maxed</th>
-        <th class="text-center">Percent</th>
+        <th class="text-center">%</th>
         <th class="text-center">Maxed</th>
-        <th class="text-center">Percent</th>
+        <th class="text-center">%</th>
         <th class="text-center">Maxed</th>
         </thead>
 
@@ -226,5 +226,5 @@
   </table>
     </div>
   </div>
-<br>
+<hr><br><br>
 {% endblock %}
