--- a/app/templates/artifacts.html
+++ b/app/templates/artifacts.html
@@ -6,7 +6,7 @@
     <div class="col-lg-12">
     <h1 class="display-4">Artifacts</h1>
         <hr>
-        <p class="instructions">Select your Artifacts and input their level. Their combined effects will be shown below. {{ testArt }} <-- needs to go into database</p>
+        <p class="instructions">Select your Artifacts and input their level. Their combined effects will are shown below.</p>
         <p></p>
         <hr>
     </div>
