--- a/app/templates/contact.html
+++ b/app/templates/contact.html
@@ -6,10 +6,22 @@
     <div class="col-lg-12">
     <h1 class="display-4">Contact</h1>
         <hr>
-        <p class="instructions">Contact form, discord, mail</p>
+        <p class="instructions">Is there a feature you would like to see implemented? Found a spelling mistake or encountered a bug?
+            <p class="instructions">Or maybe you just want to say hi? Either way you find contact details below.</p>
         <hr>
-
     </div>
 </div>
+
+<div class="row pt-3">
+    <div class="col-lg-12">
+    <h1 class="display-4">Contact</h1>
+        <hr>
+        <p class="instructions">Is there a feature you would like to see implemented? Found a spelling mistake or encountered a bug?
+            <p class="instructions">Or maybe you just want to say hi? Either way you find contact details below.</p>
+        <hr>
+    </div>
+</div>
+
+
 
 {% endblock %}
