--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -63,7 +63,11 @@
         </li>
 
         <li class="nav-item">
-          <a class="nav-link" href="{{ url_for('artifacts', username=current_user.username) }}">Artifacts</a>
+            {% if artifactactive == 1 %}
+          <a class="nav-link active" href="{{ url_for('artifacts', username=current_user.username) }}">Artifacts</a>
+            {% else %}
+            <a class="nav-link" href="{{ url_for('artifacts', username=current_user.username) }}">Artifacts</a>
+            {% endif %}
         </li>
         <li class="nav-item">
           <a class="nav-link" href="{{ url_for('bossTeam', username=current_user.username) }}">Boss Teams</a>
@@ -143,7 +147,7 @@
 
 <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
 <script>window.jQuery || document.write('<script src="../assets/js/vendor/jquery.slim.min.js"><\/script>')</script>
-  <script src="../assets/dist/js/bootstrap.bundle.js"></script>
+
 
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
