--- a/app/templates/bossTeam.html
+++ b/app/templates/bossTeam.html
@@ -239,7 +239,7 @@
                 <th colspan="2" class="text-center"><img class="rounded-circle" src="{{ url_for('static', filename='undeadsamurai.png') }}" width="80"></th>
             </tr>
             <tr>
-                <th colspan="3" class="text-center EarthEpic">Mad King</th>
+                <th colspan="3" class="text-center EarthEpic">Undead Samurai</th>
             </tr>
             <tr class="thead-dark">
                 <th class="text-center">Hero</th>
