--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -70,7 +70,11 @@
             {% endif %}
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="{{ url_for('bossTeam', username=current_user.username) }}">Boss Teams</a>
+            {% if bossactive == 1 %}
+          <a class="nav-link active" href="{{ url_for('bossTeam', username=current_user.username) }}">Boss Teams</a>
+            {% else %}
+            <a class="nav-link" href="{{ url_for('bossTeam', username=current_user.username) }}">Boss Teams</a>
+            {% endif %}
         </li>
 
         <!--
