--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -85,19 +85,35 @@
 
           {% endif %}
         <li class="nav-item">
-          <a class="nav-link" href="#">Guides</a>
+            {% if guidesactive == 1 %}
+          <a class="nav-link active" href="{{ url_for('guides', username=current_user.username) }}">Guides</a>
+            {% else %}
+            <a class="nav-link" href="{{ url_for('guides', username=current_user.username) }}">Guides</a>
+            {% endif %}
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="{{ url_for('contact') }}">Contact</a>
+            {% if contactactive == 1 %}
+          <a class="nav-link active" href="{{ url_for('contact') }}">Contact</a>
+            {% else %}
+            <a class="nav-link" href="{{ url_for('contact') }}">Contact</a>
+            {% endif %}
         </li>
       </ul>
       <ul class="navbar-nav ml-auto">
         {% if current_user.is_anonymous %}
       <li class="nav-item">
+          {% if loginactive == 1 %}
+          <a class="nav-link active" href="{{ url_for('login') }}">Login</a>
+          {% else %}
           <a class="nav-link" href="{{ url_for('login') }}">Login</a>
+          {% endif %}
       </li>
       <li class="nav-item">
+          {% if registeractive == 1 %}
+          <a class="nav-link active" href="{{ url_for('register') }}">Sign up</a>
+          {% else %}
           <a class="nav-link" href="{{ url_for('register') }}">Sign up</a>
+          {% endif %}
       </li>
         {% else %}
       <li class="nav-item">
