--- a/app/templates/contact.html
+++ b/app/templates/contact.html
@@ -6,19 +6,25 @@
     <div class="col-lg-12">
     <h1 class="display-4">Contact</h1>
         <hr>
-        <p class="instructions">Is there a feature you would like to see implemented? Found a spelling mistake or encountered a bug?
-            <p class="instructions">Or maybe you just want to say hi? Either way you find contact details below.</p>
+        <p class="instructions">Is there a feature you would like to see implemented, found a spelling mistake or encountered a bug?</p>
+            <p class="instructions">No matter the reason you find contact details below.</p>
         <hr>
     </div>
 </div>
 
 <div class="row pt-3">
-    <div class="col-lg-12">
-    <h1 class="display-4">Contact</h1>
-        <hr>
-        <p class="instructions">Is there a feature you would like to see implemented? Found a spelling mistake or encountered a bug?
-            <p class="instructions">Or maybe you just want to say hi? Either way you find contact details below.</p>
-        <hr>
+    <div class="col-lg-6">
+        <table class="table table-borderless">
+            <tr>
+                <td width="80">Discord:</td>
+                <td><a href="https://discordapp.com/users/225270542280687616" target="_blank">Cayumi#7996</a></td>
+            </tr>
+            <tr>
+                <td>E-mail:</td>
+                <td><a href="mailto:cta@cayumi.com">cta@cayumi.com</a></td>
+            </tr>
+        </table>
+
     </div>
 </div>
 
