Modal for remaining bosses

--- a/app/templates/bossTeam.html
+++ b/app/templates/bossTeam.html
@@ -127,7 +127,7 @@
             </tr>
             {% endfor %}
             <tr>
-                <td colspan="2" class="text-center"><a href="{{ url_for('calculate', username=current_user.username, boss=3) }}"><button type="button" class="btn btn-primary">Calculate</button></a></td>
+                <td colspan="2" class="text-center"><a href="{{ url_for('calculate', username=current_user.username, boss=3) }}"><button type="button" class="btn btn-primary" data-toggle="modal" data-target="#myModal">Calculate</button></a></td>
             </tr>
         </table>
     </div>
@@ -157,7 +157,7 @@
             </tr>
             {% endfor %}
             <tr>
-                <td colspan="2" class="text-center"><a href="{{ url_for('calculate', username=current_user.username, boss=10) }}"><button type="button" class="btn btn-primary">Calculate</button></a></td>
+                <td colspan="2" class="text-center"><a href="{{ url_for('calculate', username=current_user.username, boss=10) }}"><button type="button" class="btn btn-primary" data-toggle="modal" data-target="#myModal">Calculate</button></a></td>
             </tr>
         </table>
     </div>
@@ -183,7 +183,7 @@
             </tr>
             {% endfor %}
             <tr>
-                <td colspan="2" class="text-center"><a href="{{ url_for('calculate', username=current_user.username, boss=11) }}"><button type="button" class="btn btn-primary">Calculate</button></a></td>
+                <td colspan="2" class="text-center"><a href="{{ url_for('calculate', username=current_user.username, boss=11) }}"><button type="button" class="btn btn-primary" data-toggle="modal" data-target="#myModal">Calculate</button></a></td>
             </tr>
         </table>
     </div>
@@ -209,7 +209,7 @@
             </tr>
             {% endfor %}
             <tr>
-                <td colspan="2" class="text-center"><a href="{{ url_for('calculate', username=current_user.username, boss=12) }}"><button type="button" class="btn btn-primary">Calculate</button></a></td>
+                <td colspan="2" class="text-center"><a href="{{ url_for('calculate', username=current_user.username, boss=12) }}"><button type="button" class="btn btn-primary" data-toggle="modal" data-target="#myModal">Calculate</button></a></td>
             </tr>
         </table>
     </div>
@@ -238,7 +238,7 @@
             </tr>
             {% endfor %}
             <tr>
-                <td colspan="2" class="text-center"><a href="{{ url_for('calculate', username=current_user.username, boss=7) }}"><button type="button" class="btn btn-primary">Calculate</button></a></td>
+                <td colspan="2" class="text-center"><a href="{{ url_for('calculate', username=current_user.username, boss=7) }}"><button type="button" class="btn btn-primary" data-toggle="modal" data-target="#myModal">Calculate</button></a></td>
             </tr>
         </table>
     </div>
@@ -264,7 +264,7 @@
             </tr>
             {% endfor %}
             <tr>
-                <td colspan="2" class="text-center"><a href="{{ url_for('calculate', username=current_user.username, boss=8) }}"><button type="button" class="btn btn-primary">Calculate</button></a></td>
+                <td colspan="2" class="text-center"><a href="{{ url_for('calculate', username=current_user.username, boss=8) }}"><button type="button" class="btn btn-primary" data-toggle="modal" data-target="#myModal">Calculate</button></a></td>
             </tr>
         </table>
     </div>
@@ -290,7 +290,7 @@
             </tr>
             {% endfor %}
             <tr>
-                <td colspan="2" class="text-center"><a href="{{ url_for('calculate', username=current_user.username, boss=9) }}"><button type="button" class="btn btn-primary">Calculate</button></a></td>
+                <td colspan="2" class="text-center"><a href="{{ url_for('calculate', username=current_user.username, boss=9) }}"><button type="button" class="btn btn-primary" data-toggle="modal" data-target="#myModal">Calculate</button></a></td>
             </tr>
         </table>
     </div>
@@ -319,7 +319,7 @@
             </tr>
             {% endfor %}
             <tr>
-                <td colspan="2" class="text-center"><a href="{{ url_for('calculate', username=current_user.username, boss=4) }}"><button type="button" class="btn btn-primary">Calculate</button></a></td>
+                <td colspan="2" class="text-center"><a href="{{ url_for('calculate', username=current_user.username, boss=4) }}"><button type="button" class="btn btn-primary" data-toggle="modal" data-target="#myModal">Calculate</button></a></td>
             </tr>
         </table>
     </div>
@@ -345,7 +345,7 @@
             </tr>
             {% endfor %}
             <tr>
-                <td colspan="2" class="text-center"><a href="{{ url_for('calculate', username=current_user.username, boss=5) }}"><button type="button" class="btn btn-primary">Calculate</button></a></td>
+                <td colspan="2" class="text-center"><a href="{{ url_for('calculate', username=current_user.username, boss=5) }}"><button type="button" class="btn btn-primary" data-toggle="modal" data-target="#myModal">Calculate</button></a></td>
             </tr>
         </table>
     </div>
@@ -371,7 +371,7 @@
             </tr>
             {% endfor %}
             <tr>
-                <td colspan="2" class="text-center"><a href="{{ url_for('calculate', username=current_user.username, boss=6) }}"><button type="button" class="btn btn-primary">Calculate</button></a></td>
+                <td colspan="2" class="text-center"><a href="{{ url_for('calculate', username=current_user.username, boss=6) }}"><button type="button" class="btn btn-primary" data-toggle="modal" data-target="#myModal">Calculate</button></a></td>
             </tr>
         </table>
     </div>
@@ -400,7 +400,7 @@
             </tr>
             {% endfor %}
             <tr>
-                <td colspan="2" class="text-center"><a href="{{ url_for('calculate', username=current_user.username, boss=13) }}"><button type="button" class="btn btn-primary">Calculate</button></a></td>
+                <td colspan="2" class="text-center"><a href="{{ url_for('calculate', username=current_user.username, boss=13) }}"><button type="button" class="btn btn-primary" data-toggle="modal" data-target="#myModal">Calculate</button></a></td>
             </tr>
         </table>
     </div>
@@ -426,7 +426,7 @@
             </tr>
             {% endfor %}
             <tr>
-                <td colspan="2" class="text-center"><a href="{{ url_for('calculate', username=current_user.username, boss=14) }}"><button type="button" class="btn btn-primary">Calculate</button></a></td>
+                <td colspan="2" class="text-center"><a href="{{ url_for('calculate', username=current_user.username, boss=14) }}"><button type="button" class="btn btn-primary" data-toggle="modal" data-target="#myModal">Calculate</button></a></td>
             </tr>
         </table>
     </div>
@@ -452,7 +452,7 @@
             </tr>
             {% endfor %}
             <tr>
-                <td colspan="2" class="text-center"><a href="{{ url_for('calculate', username=current_user.username, boss=15) }}"><button type="button" class="btn btn-primary">Calculate</button></a></td>
+                <td colspan="2" class="text-center"><a href="{{ url_for('calculate', username=current_user.username, boss=15) }}"><button type="button" class="btn btn-primary" data-toggle="modal" data-target="#myModal">Calculate</button></a></td>
             </tr>
         </table>
     </div>
