Format raidDPS, minor design tweaks. Adsense

--- a/app/templates/bossTeam.html
+++ b/app/templates/bossTeam.html
@@ -28,13 +28,13 @@
                 <th colspan="3" class="text-center WaterRare">Kraken</th>
             </tr>
             <tr class="thead-dark">
-                <th class="text-center">Hero</th>
-                <th class="text-center">DPS</th>
+                <th>Hero</th>
+                <th>DPS</th>
             </tr>
             </thead>
             {% for key, value in krakenDict.items() %}
             <tr>
-                <td class="text-center">{{ key }}</td><td class="text-center">{{ value }}</td>
+                <td>{{ key }}</td><td>{{ value }}</td>
             </tr>
             {% endfor %}
             <tr>
@@ -91,13 +91,13 @@
                 <th colspan="3" class="text-center WaterRare">Deep Sea King</th>
             </tr>
             <tr class="thead-dark">
-                <th class="text-center">Hero</th>
-                <th class="text-center">DPS</th>
+                <th>Hero</th>
+                <th>DPS</th>
             </tr>
             </thead>
             {% for key, value in deepseakingDict.items() %}
             <tr>
-                <td class="text-center">{{ key }}</td><td class="text-center">{{ value }}</td>
+                <td>{{ key }}</td><td>{{ value }}</td>
             </tr>
             {% endfor %}
             <tr>
@@ -117,13 +117,13 @@
                 <th colspan="3" class="text-center WaterEpic">Frostwing</th>
             </tr>
             <tr class="thead-dark">
-                <th class="text-center">Hero</th>
-                <th class="text-center">DPS</th>
+                <th>Hero</th>
+                <th>DPS</th>
             </tr>
             </thead>
             {% for key, value in frostwingDict.items() %}
             <tr>
-                <td class="text-center">{{ key }}</td><td class="text-center">{{ value }}</td>
+                <td>{{ key }}</td><td>{{ value }}</td>
             </tr>
             {% endfor %}
             <tr>
@@ -147,13 +147,13 @@
                 <th colspan="3" class="text-center FireRare">Valken Bot</th>
             </tr>
             <tr class="thead-dark">
-                <th class="text-center">Hero</th>
-                <th class="text-center">DPS</th>
+                <th>Hero</th>
+                <th>DPS</th>
             </tr>
             </thead>
             {% for key, value in valkenbotDict.items() %}
             <tr>
-                <td class="text-center">{{ key }}</td><td class="text-center">{{ value }}</td>
+                <td>{{ key }}</td><td>{{ value }}</td>
             </tr>
             {% endfor %}
             <tr>
@@ -173,13 +173,13 @@
                 <th colspan="3" class="text-center FireRare">Fire Gorge</th>
             </tr>
             <tr class="thead-dark">
-                <th class="text-center">Hero</th>
-                <th class="text-center">DPS</th>
+                <th>Hero</th>
+                <th>DPS</th>
             </tr>
             </thead>
             {% for key, value in firegorgeDict.items() %}
             <tr>
-                <td class="text-center">{{ key }}</td><td class="text-center">{{ value }}</td>
+                <td>{{ key }}</td><td>{{ value }}</td>
             </tr>
             {% endfor %}
             <tr>
@@ -199,13 +199,13 @@
                 <th colspan="3" class="text-center FireEpic">Mad King</th>
             </tr>
             <tr class="thead-dark">
-                <th class="text-center">Hero</th>
-                <th class="text-center">DPS</th>
+                <th>Hero</th>
+                <th>DPS</th>
             </tr>
             </thead>
             {% for key, value in madkingDict.items() %}
             <tr>
-                <td class="text-center">{{ key }}</td><td class="text-center">{{ value }}</td>
+                <td>{{ key }}</td><td>{{ value }}</td>
             </tr>
             {% endfor %}
             <tr>
@@ -228,13 +228,13 @@
                 <th colspan="3" class="text-center EarthRare">Sandclaw</th>
             </tr>
             <tr class="thead-dark">
-                <th class="text-center">Hero</th>
-                <th class="text-center">DPS</th>
+                <th>Hero</th>
+                <th>DPS</th>
             </tr>
             </thead>
             {% for key, value in sandclawDict.items() %}
             <tr>
-                <td class="text-center">{{ key }}</td><td class="text-center">{{ value }}</td>
+                <td>{{ key }}</td><td>{{ value }}</td>
             </tr>
             {% endfor %}
             <tr>
@@ -254,13 +254,13 @@
                 <th colspan="3" class="text-center EarthRare">Voodoo Tank</th>
             </tr>
             <tr class="thead-dark">
-                <th class="text-center">Hero</th>
-                <th class="text-center">DPS</th>
+                <th>Hero</th>
+                <th>DPS</th>
             </tr>
             </thead>
             {% for key, value in voodootankDict.items() %}
             <tr>
-                <td class="text-center">{{ key }}</td><td class="text-center">{{ value }}</td>
+                <td>{{ key }}</td><td>{{ value }}</td>
             </tr>
             {% endfor %}
             <tr>
@@ -280,13 +280,13 @@
                 <th colspan="3" class="text-center EarthEpic">Undead Samurai</th>
             </tr>
             <tr class="thead-dark">
-                <th class="text-center">Hero</th>
-                <th class="text-center">DPS</th>
+                <th>Hero</th>
+                <th>DPS</th>
             </tr>
             </thead>
             {% for key, value in undeadsamuraiDict.items() %}
             <tr>
-                <td class="text-center">{{ key }}</td><td class="text-center">{{ value }}</td>
+                <td>{{ key }}</td><td>{{ value }}</td>
             </tr>
             {% endfor %}
             <tr>
@@ -309,13 +309,13 @@
                 <th colspan="3" class="text-center LightRare">Odin</th>
             </tr>
             <tr class="thead-dark">
-                <th class="text-center">Hero</th>
-                <th class="text-center">DPS</th>
+                <th>Hero</th>
+                <th>DPS</th>
             </tr>
             </thead>
             {% for key, value in odinDict.items() %}
             <tr>
-                <td class="text-center">{{ key }}</td><td class="text-center">{{ value }}</td>
+                <td>{{ key }}</td><td>{{ value }}</td>
             </tr>
             {% endfor %}
             <tr>
@@ -335,13 +335,13 @@
                 <th colspan="3" class="text-center LightRare">Light Mech</th>
             </tr>
             <tr class="thead-dark">
-                <th class="text-center">Hero</th>
-                <th class="text-center">DPS</th>
+                <th>Hero</th>
+                <th>DPS</th>
             </tr>
             </thead>
             {% for key, value in lightmechDict.items() %}
             <tr>
-                <td class="text-center">{{ key }}</td><td class="text-center">{{ value }}</td>
+                <td>{{ key }}</td><td>{{ value }}</td>
             </tr>
             {% endfor %}
             <tr>
@@ -361,13 +361,13 @@
                 <th colspan="3" class="text-center LightEpic">Astrolab</th>
             </tr>
             <tr class="thead-dark">
-                <th class="text-center">Hero</th>
-                <th class="text-center">DPS</th>
+                <th>Hero</th>
+                <th>DPS</th>
             </tr>
             </thead>
             {% for key, value in astrolabDict.items() %}
             <tr>
-                <td class="text-center">{{ key }}</td><td class="text-center">{{ value }}</td>
+                <td>{{ key }}</td><td>{{ value }}</td>
             </tr>
             {% endfor %}
             <tr>
@@ -390,13 +390,13 @@
                 <th colspan="3" class="text-center DarkRare">Beetle</th>
             </tr>
             <tr class="thead-dark">
-                <th class="text-center">Hero</th>
-                <th class="text-center">DPS</th>
+                <th>Hero</th>
+                <th>DPS</th>
             </tr>
             </thead>
             {% for key, value in beetleDict.items() %}
             <tr>
-                <td class="text-center">{{ key }}</td><td class="text-center">{{ value }}</td>
+                <td>{{ key }}</td><td>{{ value }}</td>
             </tr>
             {% endfor %}
             <tr>
@@ -416,13 +416,13 @@
                 <th colspan="3" class="text-center DarkRare">Haunting Head</th>
             </tr>
             <tr class="thead-dark">
-                <th class="text-center">Hero</th>
-                <th class="text-center">DPS</th>
+                <th>Hero</th>
+                <th>DPS</th>
             </tr>
             </thead>
             {% for key, value in hauntingheadDict.items() %}
             <tr>
-                <td class="text-center">{{ key }}</td><td class="text-center">{{ value }}</td>
+                <td>{{ key }}</td><td>{{ value }}</td>
             </tr>
             {% endfor %}
             <tr>
@@ -442,13 +442,13 @@
                 <th colspan="3" class="text-center DarkEpic">Gun Lord</th>
             </tr>
             <tr class="thead-dark">
-                <th class="text-center">Hero</th>
-                <th class="text-center">DPS</th>
+                <th>Hero</th>
+                <th>DPS</th>
             </tr>
             </thead>
             {% for key, value in gunlordDict.items() %}
             <tr>
-                <td class="text-center">{{ key }}</td><td class="text-center">{{ value }}</td>
+                <td>{{ key }}</td><td>{{ value }}</td>
             </tr>
             {% endfor %}
             <tr>
