--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -31,7 +31,7 @@
       }
   </style>
 
-
+<script data-ad-client="ca-pub-3393998463839471" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
   </head>
   <body>
 
